# dict-mastodon-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: config.example.yaml
src/: cmd.rs  config.rs  error.rs  main.rs  masto_bot.rs
tests/assets/: config.yaml  config_2.yaml  dictionary.txt  dictionary2.txt  wrong_config.yaml
