[package]
name = "masto_bot"
author = "LilithL"
repository = "https://github.com/LilithL/dict-mastodon-rs"
version = "0.0.1"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wordnik = "0.1.0"
clap = "2.33.3"
elefren = "0.22.0"
yaml-rust = "0.4.5"
rand = "0.8.4"