[package]
name = "masto_bot"
author = "LilithL"
description = "The core program of lesbianBot. Rust edition !"
repository = "https://github.com/LilithL/dict-mastodon-rs"
version = "0.0.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wordnik = "0.1.2"
clap = "3.1.18"
elefren = "0.22.0"
serde_yaml = "0.8.24"
rand = "0.8.4"
serde = "1.0.137"