[package]
name = "masto_bot"
author = "LilithL"
description = "A simple word posting bot. Rust edition !"
repository = "https://github.com/LilithL/dict-mastodon-rs"
version = "0.9.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wordnik = {git = "https://github.com/LilithL/wordnik.git", branch= "develop"}
clap = "3.1.18"
elefren = "0.22.0"
serde_yaml = "0.8.24"
rand = "0.8.4"
serde = "1.0.137"